# dsm-alignment

./: CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: data_contracts.md
src/dsm_alignment/: __init__.py  common.py  distributional.py  dml.py  features.py  flexd.py  hilo.py  logisvert.py  low_income.py  probabilistic.py  reporting.py  synthesis.py  workflows.py
tests/: test_imports.py  test_synthesis.py
