[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsm-alignment"
version = "0.1.0"
description = "Demand-side management alignment models, weighting workflows, and reporting utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammad Hamsa" }
]
dependencies = [
  "urban-energy-core",
  "numpy",
  "pandas",
  "plotly",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
]
xgboost = [
  "xgboost",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
